--- a/src/WinUIKernel.AI/Resources/zh-CN/Resources.resw
+++ b/src/WinUIKernel.AI/Resources/zh-CN/Resources.resw
@@ -135,8 +135,17 @@
   <data name="AddYourCustomModel" xml:space="preserve">
     <value>添加自定义模型</value>
   </data>
+  <data name="AliAccessKeySecretDescription" xml:space="preserve">
+    <value>在阿里云中注册并获取 Secret</value>
+  </data>
+  <data name="AliTranslateAccessKeyDescription" xml:space="preserve">
+    <value>在阿里云中注册并获取密钥</value>
+  </data>
   <data name="ApiKey" xml:space="preserve">
     <value>API 密钥（API Key）</value>
+  </data>
+  <data name="AppId" xml:space="preserve">
+    <value>应用 ID</value>
   </data>
   <data name="AzureOpenAIAccessKeyDescription" xml:space="preserve">
     <value>在 Azure 门户相应资源的 "密钥与终结点" 中找到此值，可用 KEY1 或 KEY2</value>
@@ -149,6 +158,12 @@
   </data>
   <data name="AzureSpeechAccessKeyDescription" xml:space="preserve">
     <value>在 Azure 门户相应资源的 "密钥与终结点" 中找到此值，可用 KEY1 或 KEY2</value>
+  </data>
+  <data name="AzureTranslateAccessKeyDescription" xml:space="preserve">
+    <value>在 Azure 门户相应资源的 "密钥与终结点" 中找到此值，可用 KEY1 或 KEY2</value>
+  </data>
+  <data name="BaiduAppIdDescription" xml:space="preserve">
+    <value>在百度翻译开放平台中注册并获取 App ID</value>
   </data>
   <data name="Cancel" xml:space="preserve">
     <value>取消</value>
@@ -188,6 +203,15 @@
   </data>
   <data name="ErnieSecretDescription" xml:space="preserve">
     <value>从百度千帆大模型平台的 "应用接入" 中获取 Secret Key</value>
+  </data>
+  <data name="HunyuanSecretIdDescription" xml:space="preserve">
+    <value>在 "API密钥管理" 中获取 SecretId</value>
+  </data>
+  <data name="HunyuanSecretKeyDescription" xml:space="preserve">
+    <value>在 "API密钥管理" 中创建 SecretKey 时获取</value>
+  </data>
+  <data name="KeyId" xml:space="preserve">
+    <value>密钥 ID</value>
   </data>
   <data name="ModelAlreadyExist" xml:space="preserve">
     <value>模型已存在</value>
@@ -239,5 +263,26 @@
   </data>
   <data name="SeeAllPredefinedModels" xml:space="preserve">
     <value>查看全部预定义模型</value>
+  </data>
+  <data name="SparkAppIdDescription" xml:space="preserve">
+    <value>在讯飞开放平台中注册应用并获取 App ID</value>
+  </data>
+  <data name="SparkSecretDescription" xml:space="preserve">
+    <value>在讯飞开放平台中注册应用并获取 Secret</value>
+  </data>
+  <data name="TencentSecretIdDescription" xml:space="preserve">
+    <value>在 "API密钥管理" 中获取 SecretId</value>
+  </data>
+  <data name="TencentSecretKeyDescription" xml:space="preserve">
+    <value>在 "API密钥管理" 中创建 SecretKey 时获取</value>
+  </data>
+  <data name="VolcanoKeyIdDescription" xml:space="preserve">
+    <value>在火山引擎的 "API访问密钥" 中获取 Access Key ID</value>
+  </data>
+  <data name="VolcanoSecretKeyDescription" xml:space="preserve">
+    <value>在火山引擎的 "API访问密钥" 中获取 Secret Access Key</value>
+  </data>
+  <data name="YoudaoAppIdDescription" xml:space="preserve">
+    <value>在有道开放平台中注册并获取 App ID</value>
   </data>
 </root>
